--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </style>
 </head>
 <body>
-  <img class="sample-img" src="assets/photobooth.jpg" alt="Sample Photo" />
+  <img class="sample-img" src="photobooth.jpg" alt="Sample Photo" />
   <h1>Welcome to Shot n Go!</h1>
   <p>Strike a pose, pick your vibe, and capture the moment like never before.</p>
   <button onclick="location.href='selfie.html'">Take a Pic</button>
