--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="google-site-verification: google0958a1b5400a9a3a.html">
   <title>Shot n Go!</title>
   <link rel="stylesheet" href="CSS/photobooth.css">
   <style>
