--- a/selfie.html
+++ b/selfie.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -175,9 +174,8 @@
     }
 
     #strip img {
-    width: 90%;
-    max-width: 300px;
-    height: auto;
+    width: 240px;
+    height: 176px;
     margin: 10px 0;
     padding: 10px;
     background: #fff;
@@ -189,7 +187,7 @@
     .caption {
     font-weight: bold;
     font-size: 16px;
-    padding: 10px 0;
+    padding: 10px;
     text-align: center;
     font-family: Arial, sans-serif;
     }
@@ -259,6 +257,7 @@
 
     .caption {
         font-size: 14px;
+        text-align: center;
     }
 
     #strip {
@@ -328,19 +327,18 @@
 
   <div id="overlay" onclick="closePopup()"></div>
   <div class="popup" id="filterPopup">
-    <div class="filter-grid">
-      <div class="filter-thumb" style="filter: none; background-image: url('sample.jpg');" onclick="setFilter('none')">Normal</div>
-      <div class="filter-thumb" style="filter: grayscale(1); background-image: url('sample.jpg');" onclick="setFilter('grayscale(1)')">Grayscale</div>
-      <div class="filter-thumb" style="filter: hue-rotate(180deg); background-image: url('sample.jpg');" onclick="setFilter('hue-rotate(180deg)')">Hue</div>
-      <div class="filter-thumb" style="filter: sepia(1); background-image: url('sample.jpg');" onclick="setFilter('sepia(1)')">Sepia</div>
-      <div class="filter-thumb" style="filter: invert(1); background-image: url('sample.jpg');" onclick="setFilter('invert(1)')">Invert</div>
-      <div class="filter-thumb" style="filter: blur(2px); background-image: url('sample.jpg');" onclick="setFilter('blur(2px)')">Blur</div>
-      <div class="filter-thumb" style="filter: contrast(1.4); background-image: url('sample.jpg');" onclick="setFilter('contrast(1.4)')">Contrast</div>
-      <div class="filter-thumb" style="filter: brightness(1.2); background-image: url('sample.jpg');" onclick="setFilter('brightness(1.2)')">Bright</div>
-      <div class="filter-thumb" style="filter: brightness(1.2) contrast(1.4) saturate(1.6); background-image: url('sample.jpg');" onclick="setFilter('brightness(1.2) contrast(1.4) saturate(1.6)')">Vivid</div>
-
-    </div>
+  <div class="filter-grid">
+    <div class="filter-thumb" style="filter: none; background-image: url('sample.jpg');" onclick="setFilter('none')">Normal</div>
+    <div class="filter-thumb" style="filter: grayscale(1); background-image: url('sample.jpg');" onclick="setFilter('grayscale(1)')">Grayscale</div>
+    <div class="filter-thumb" style="filter: blur(2px); background-image: url('sample.jpg');" onclick="setFilter('blur(2px)')">Blur</div>
+    <div class="filter-thumb" style="filter: sepia(1); background-image: url('sample.jpg');" onclick="setFilter('sepia(1)')">Sepia</div>
+    <div class="filter-thumb" style="filter: contrast(1.5) saturate(2) hue-rotate(90deg); background-image: url('sample.jpg');" onclick="setFilter('contrast(1.5) saturate(2) hue-rotate(90deg)')">Pop</div>
+    <div class="filter-thumb" style="filter: sepia(0.5) contrast(1.2) brightness(1.1); background-image: url('sample.jpg');" onclick="setFilter('sepia(0.5) contrast(1.2) brightness(1.1)')">Film</div>
+    <div class="filter-thumb" style="filter: contrast(1.4); background-image: url('sample.jpg');" onclick="setFilter('contrast(1.4)')">Contrast</div>
+    <div class="filter-thumb" style="filter: brightness(1.2); background-image: url('sample.jpg');" onclick="setFilter('brightness(1.2)')">Bright</div>
+    <div class="filter-thumb" style="filter: brightness(1.2) contrast(1.4) saturate(1.6); background-image: url('sample.jpg');" onclick="setFilter('brightness(1.2) contrast(1.4) saturate(1.6)')">Vivid</div>
   </div>
+</div>
 
   <div class="flash" id="flash"></div>
 
@@ -452,7 +450,7 @@
     function downloadStrip() {
   const canvas  = document.createElement('canvas');
   const width   = 320;               // whole strip width
-  const height  = 240 * 4 + 80;      // 4 pics + caption space
+  const height  = 240 * 4 + 70;      // 4 pics + caption space
   canvas.width  = width;
   canvas.height = height;
   const ctx = canvas.getContext('2d');
